# AI_PROJECT

./: CMakeLists.txt
include/: .renju.h.swo  getval.h  renju.h
srcs/: .getval.c.swp  Main.c  getval.c  play.c  renju.c  rjFunction.c
